# sn-image-screener

./: .gitignore  LICENSE  README.md  USER_GUIDE.md  build_in_docker.sh  build_windows.bat  pyproject.toml  requirements.txt  run.py  sn_image_screener.spec
.github/workflows/: ci.yml
docs/: CHANGES.md  design.md
scripts/: make_sample_images.py
sn_image_screener/: __init__.py  main.py
sn_image_screener/core/: __init__.py  classifier.py  deleter.py  detection.py  exporter.py  presets.py  scanner.py
sn_image_screener/services/ai/: __init__.py  key_manager.py  models.py  parallel_runner.py  region_merge.py  run_anatomy_check.py  tiling.py  types.py
sn_image_screener/services/ai/prompts/: anatomy_prompt.py
sn_image_screener/services/ai/providers/: __init__.py  base.py  (+3 more)
sn_image_screener/ui/: __init__.py  command_bar.py  control_panel.py  delete_dialog.py  full_review.py  icons.py  inspector.py  log_panel.py  main_window.py  nav_rail.py  results_table.py  settings_panel.py  technical_report_panel.py  theme.py  toast.py  widgets.py  workers.py
sn_image_screener/ui/ai/: __init__.py  ai_panel.py  inspection_worker.py  key_settings_dialog.py  marker_view.py  report_panel.py  review_dialog.py
tests/: conftest.py  test_ai_export.py  test_ai_key_cooldown.py  test_ai_key_manager.py  test_ai_key_persistence.py  test_ai_models.py  test_ai_parallel_runner.py  test_ai_providers.py  test_ai_region_merge.py  test_ai_runner.py  test_ai_tiling.py  test_classifier.py  test_deleter.py  test_detection.py  test_marker_view_zoom.py  test_scanner_exporter.py  test_settings_panel.py
